// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Organization Developer Settings when Apps exist displays all Apps owned by the Org 1`] = `
<OrganizationDeveloperSettings
  params={
    Object {
      "orgId": "org-slug",
    }
  }
>
  <SideEffect(DocumentTitle)
    title="Sentry"
  >
    <DocumentTitle
      title="Sentry"
    >
      <div>
        <SettingsPageHeading
          action={
            <Button
              disabled={false}
              icon="icon-circle-add"
              priority="primary"
              size="small"
              to="/settings/org-slug/developer-settings/new/"
            >
              Create New Application
            </Button>
          }
          title="Developer Settings"
        >
          <Wrapper>
            <div
              className="css-1pnrn3o-Wrapper e1kblvez1"
            >
              <Flex
                align="center"
              >
                <Base
                  align="center"
                  className="css-5ipae5"
                >
                  <div
                    className="css-5ipae5"
                    is={null}
                  >
                    <Title>
                      <Base
                        className="css-1mqcea-Title e1kblvez0"
                      >
                        <div
                          className="css-1mqcea-Title e1kblvez0"
                          is={null}
                        >
                          Developer Settings
                        </div>
                      </Base>
                    </Title>
                    <div>
                      <Button
                        disabled={false}
                        icon="icon-circle-add"
                        priority="primary"
                        size="small"
                        to="/settings/org-slug/developer-settings/new/"
                      >
                        <StyledButton
                          aria-label="Create New Application"
                          disabled={false}
                          onClick={[Function]}
                          priority="primary"
                          role="button"
                          size="small"
                          to="/settings/org-slug/developer-settings/new/"
                        >
                          <Component
                            aria-label="Create New Application"
                            className="css-zvpqlo-StyledButton-getColors eqrebog0"
                            disabled={false}
                            onClick={[Function]}
                            priority="primary"
                            role="button"
                            size="small"
                            to="/settings/org-slug/developer-settings/new/"
                          >
                            <Link
                              aria-label="Create New Application"
                              className="css-zvpqlo-StyledButton-getColors eqrebog0"
                              disabled={false}
                              onClick={[Function]}
                              onlyActiveOnIndex={false}
                              priority="primary"
                              role="button"
                              size="small"
                              style={Object {}}
                              to="/settings/org-slug/developer-settings/new/"
                            >
                              <a
                                aria-label="Create New Application"
                                className="css-zvpqlo-StyledButton-getColors eqrebog0"
                                disabled={false}
                                onClick={[Function]}
                                priority="primary"
                                role="button"
                                size="small"
                                style={Object {}}
                              >
                                <ButtonLabel
                                  priority="primary"
                                  size="small"
                                >
                                  <Component
                                    className="css-7ui8bl-ButtonLabel eqrebog1"
                                    priority="primary"
                                    size="small"
                                  >
                                    <span
                                      className="css-7ui8bl-ButtonLabel eqrebog1"
                                    >
                                      <Icon
                                        hasChildren={true}
                                        size="small"
                                      >
                                        <Component
                                          className="css-1vdnsie-Icon eqrebog2"
                                          hasChildren={true}
                                          size="small"
                                        >
                                          <span
                                            className="css-1vdnsie-Icon eqrebog2"
                                            size="small"
                                          >
                                            <StyledInlineSvg
                                              size="12px"
                                              src="icon-circle-add"
                                            >
                                              <InlineSvg
                                                className="css-1ov3rcq-StyledInlineSvg eqrebog3"
                                                size="12px"
                                                src="icon-circle-add"
                                              >
                                                <StyledSvg
                                                  className="css-1ov3rcq-StyledInlineSvg eqrebog3"
                                                  height="12px"
                                                  viewBox={Object {}}
                                                  width="12px"
                                                >
                                                  <svg
                                                    className="eqrebog3 css-1jjmnki-StyledSvg-StyledInlineSvg e2idor0"
                                                    height="12px"
                                                    viewBox={Object {}}
                                                    width="12px"
                                                  >
                                                    <use
                                                      href="#test"
                                                      xlinkHref="#test"
                                                    />
                                                  </svg>
                                                </StyledSvg>
                                              </InlineSvg>
                                            </StyledInlineSvg>
                                          </span>
                                        </Component>
                                      </Icon>
                                      Create New Application
                                    </span>
                                  </Component>
                                </ButtonLabel>
                              </a>
                            </Link>
                          </Component>
                        </StyledButton>
                      </Button>
                    </div>
                  </div>
                </Base>
              </Flex>
            </div>
          </Wrapper>
        </SettingsPageHeading>
        <Panel>
          <Component
            className="css-yahxlu-Panel e1laxa7d0"
          >
            <div
              className="css-yahxlu-Panel e1laxa7d0"
            >
              <PanelHeader>
                <Component
                  className="css-xhx6pj-PanelHeader-getPadding e1p8v8nv0"
                >
                  <Flex
                    align="center"
                    className="css-xhx6pj-PanelHeader-getPadding e1p8v8nv0"
                    justify="space-between"
                  >
                    <Base
                      align="center"
                      className="e1p8v8nv0 css-b7ices-PanelHeader-getPadding"
                      justify="space-between"
                    >
                      <div
                        className="e1p8v8nv0 css-b7ices-PanelHeader-getPadding"
                        is={null}
                      >
                        Applications
                      </div>
                    </Base>
                  </Flex>
                </Component>
              </PanelHeader>
              <PanelBody
                direction="column"
                disablePadding={true}
                flex={false}
              >
                <div
                  className="css-9vq8an-textStyles"
                >
                  <SentryApplicationRow
                    app={
                      Object {
                        "clientId": "client-id",
                        "clientSecret": "client-secret",
                        "events": Array [],
                        "isAlertable": false,
                        "name": "Sample App",
                        "overview": "This is an app.",
                        "redirectUrl": "https://example/com/setup",
                        "scopes": Array [
                          "project:read",
                        ],
                        "slug": "sample-app",
                        "uuid": "123456123456123456123456",
                        "webhookUrl": "https://example.com/webhook",
                      }
                    }
                    key="123456123456123456123456"
                    orgId="org-slug"
                    showPublishStatus={true}
                  >
                    <SentryAppItem>
                      <Base
                        className="css-h9gjd5-PanelItem-SentryAppItem eac2pqx0"
                      >
                        <div
                          className="css-h9gjd5-PanelItem-SentryAppItem eac2pqx0"
                          is={null}
                        >
                          <StyledFlex>
                            <Base
                              className="css-14n192s-StyledFlex eac2pqx1"
                            >
                              <div
                                className="css-14n192s-StyledFlex eac2pqx1"
                                is={null}
                              >
                                <SentryAppAvatar
                                  sentryApp={
                                    Object {
                                      "clientId": "client-id",
                                      "clientSecret": "client-secret",
                                      "events": Array [],
                                      "isAlertable": false,
                                      "name": "Sample App",
                                      "overview": "This is an app.",
                                      "redirectUrl": "https://example/com/setup",
                                      "scopes": Array [
                                        "project:read",
                                      ],
                                      "slug": "sample-app",
                                      "uuid": "123456123456123456123456",
                                      "webhookUrl": "https://example.com/webhook",
                                    }
                                  }
                                  size={36}
                                >
                                  <BaseAvatar
                                    hasTooltip={false}
                                    letterId="123456123456123456123456"
                                    size={36}
                                    style={Object {}}
                                    title="Sample App"
                                    tooltip="Sample App"
                                    type="letter_avatar"
                                    uploadId=""
                                    uploadPath="avatar"
                                  >
                                    <Tooltip
                                      disabled={true}
                                      title="Sample App"
                                    >
                                      <StyledBaseAvatar
                                        className="avatar"
                                        loaded={true}
                                        style={
                                          Object {
                                            "height": "36px",
                                            "width": "36px",
                                          }
                                        }
                                      >
                                        <span
                                          className="avatar css-1i62700-StyledBaseAvatar e1z0ohzl0"
                                          style={
                                            Object {
                                              "height": "36px",
                                              "width": "36px",
                                            }
                                          }
                                        >
                                          <LetterAvatar
                                            displayName="Sample App"
                                            identifier="123456123456123456123456"
                                          >
                                            <Svg
                                              viewBox="0 0 120 120"
                                            >
                                              <svg
                                                className="css-123ijso-Svg e1knxa8x0"
                                                viewBox="0 0 120 120"
                                              >
                                                <rect
                                                  fill="#4674ca"
                                                  height="120"
                                                  rx="15"
                                                  ry="15"
                                                  width="120"
                                                  x="0"
                                                  y="0"
                                                />
                                                <text
                                                  fill="#FFFFFF"
                                                  fontSize="65"
                                                  style={
                                                    Object {
                                                      "dominantBaseline": "central",
                                                    }
                                                  }
                                                  textAnchor="middle"
                                                  x="50%"
                                                  y="50%"
                                                >
                                                  SA
                                                </text>
                                              </svg>
                                            </Svg>
                                          </LetterAvatar>
                                        </span>
                                      </StyledBaseAvatar>
                                    </Tooltip>
                                  </BaseAvatar>
                                </SentryAppAvatar>
                                <SentryAppBox>
                                  <Base
                                    className="css-161g25b-SentryAppBox eac2pqx2"
                                  >
                                    <div
                                      className="css-161g25b-SentryAppBox eac2pqx2"
                                      is={null}
                                    >
                                      <SentryAppName>
                                        <div
                                          className="css-uiwo8x-SentryAppName eac2pqx4"
                                        >
                                          <SentryAppLink
                                            to="/settings/org-slug/developer-settings/sample-app/"
                                          >
                                            <Link
                                              className="css-gg019v-SentryAppLink eac2pqx6"
                                              onlyActiveOnIndex={false}
                                              style={Object {}}
                                              to="/settings/org-slug/developer-settings/sample-app/"
                                            >
                                              <a
                                                className="css-gg019v-SentryAppLink eac2pqx6"
                                                onClick={[Function]}
                                                style={Object {}}
                                              >
                                                Sample App
                                              </a>
                                            </Link>
                                          </SentryAppLink>
                                        </div>
                                      </SentryAppName>
                                      <SentryAppDetails>
                                        <Base
                                          className="css-f0t6d-SentryAppDetails eac2pqx3"
                                        >
                                          <div
                                            className="css-f0t6d-SentryAppDetails eac2pqx3"
                                            is={null}
                                          >
                                            <PublishStatus
                                              published={false}
                                            >
                                              <Component
                                                className="css-1h03aoe-PublishStatus eac2pqx9"
                                                published={false}
                                              >
                                                <Flex
                                                  align="center"
                                                >
                                                  <Base
                                                    align="center"
                                                    className="css-5ipae5"
                                                  >
                                                    <div
                                                      className="css-5ipae5"
                                                      is={null}
                                                    >
                                                      <div
                                                        className="css-1h03aoe-PublishStatus eac2pqx9"
                                                      >
                                                        unpublished
                                                      </div>
                                                    </div>
                                                  </Base>
                                                </Flex>
                                              </Component>
                                            </PublishStatus>
                                          </div>
                                        </Base>
                                      </SentryAppDetails>
                                    </div>
                                  </Base>
                                </SentryAppBox>
                                <Box>
                                  <Base
                                    className="css-roynbj"
                                  >
                                    <div
                                      className="css-roynbj"
                                      is={null}
                                    >
                                      <Button
                                        disabled={false}
                                        icon="icon-trash"
                                        onClick={[Function]}
                                        size="small"
                                      >
                                        <StyledButton
                                          disabled={false}
                                          onClick={[Function]}
                                          role="button"
                                          size="small"
                                        >
                                          <Component
                                            className="css-dkprmi-StyledButton-getColors eqrebog0"
                                            disabled={false}
                                            onClick={[Function]}
                                            role="button"
                                            size="small"
                                          >
                                            <button
                                              className="css-dkprmi-StyledButton-getColors eqrebog0"
                                              disabled={false}
                                              onClick={[Function]}
                                              role="button"
                                              size="small"
                                            >
                                              <ButtonLabel
                                                size="small"
                                              >
                                                <Component
                                                  className="css-7ui8bl-ButtonLabel eqrebog1"
                                                  size="small"
                                                >
                                                  <span
                                                    className="css-7ui8bl-ButtonLabel eqrebog1"
                                                  >
                                                    <Icon
                                                      hasChildren={false}
                                                      size="small"
                                                    >
                                                      <Component
                                                        className="css-ljhpxy-Icon eqrebog2"
                                                        hasChildren={false}
                                                        size="small"
                                                      >
                                                        <span
                                                          className="css-ljhpxy-Icon eqrebog2"
                                                          size="small"
                                                        >
                                                          <StyledInlineSvg
                                                            size="12px"
                                                            src="icon-trash"
                                                          >
                                                            <InlineSvg
                                                              className="css-1ov3rcq-StyledInlineSvg eqrebog3"
                                                              size="12px"
                                                              src="icon-trash"
                                                            >
                                                              <StyledSvg
                                                                className="css-1ov3rcq-StyledInlineSvg eqrebog3"
                                                                height="12px"
                                                                viewBox={Object {}}
                                                                width="12px"
                                                              >
                                                                <svg
                                                                  className="eqrebog3 css-1jjmnki-StyledSvg-StyledInlineSvg e2idor0"
                                                                  height="12px"
                                                                  viewBox={Object {}}
                                                                  width="12px"
                                                                >
                                                                  <use
                                                                    href="#test"
                                                                    xlinkHref="#test"
                                                                  />
                                                                </svg>
                                                              </StyledSvg>
                                                            </InlineSvg>
                                                          </StyledInlineSvg>
                                                        </span>
                                                      </Component>
                                                    </Icon>
                                                  </span>
                                                </Component>
                                              </ButtonLabel>
                                            </button>
                                          </Component>
                                        </StyledButton>
                                      </Button>
                                    </div>
                                  </Base>
                                </Box>
                              </div>
                            </Base>
                          </StyledFlex>
                        </div>
                      </Base>
                    </SentryAppItem>
                  </SentryApplicationRow>
                </div>
              </PanelBody>
            </div>
          </Component>
        </Panel>
      </div>
    </DocumentTitle>
  </SideEffect(DocumentTitle)>
</OrganizationDeveloperSettings>
`;

exports[`Organization Developer Settings when no Apps exist displays empty state 1`] = `
<OrganizationDeveloperSettings
  params={
    Object {
      "orgId": "org-slug",
    }
  }
>
  <SideEffect(DocumentTitle)
    title="Sentry"
  >
    <DocumentTitle
      title="Sentry"
    >
      <div>
        <SettingsPageHeading
          action={
            <Button
              disabled={false}
              icon="icon-circle-add"
              priority="primary"
              size="small"
              to="/settings/org-slug/developer-settings/new/"
            >
              Create New Application
            </Button>
          }
          title="Developer Settings"
        >
          <Wrapper>
            <div
              className="css-1pnrn3o-Wrapper e1kblvez1"
            >
              <Flex
                align="center"
              >
                <Base
                  align="center"
                  className="css-5ipae5"
                >
                  <div
                    className="css-5ipae5"
                    is={null}
                  >
                    <Title>
                      <Base
                        className="css-1mqcea-Title e1kblvez0"
                      >
                        <div
                          className="css-1mqcea-Title e1kblvez0"
                          is={null}
                        >
                          Developer Settings
                        </div>
                      </Base>
                    </Title>
                    <div>
                      <Button
                        disabled={false}
                        icon="icon-circle-add"
                        priority="primary"
                        size="small"
                        to="/settings/org-slug/developer-settings/new/"
                      >
                        <StyledButton
                          aria-label="Create New Application"
                          disabled={false}
                          onClick={[Function]}
                          priority="primary"
                          role="button"
                          size="small"
                          to="/settings/org-slug/developer-settings/new/"
                        >
                          <Component
                            aria-label="Create New Application"
                            className="css-zvpqlo-StyledButton-getColors eqrebog0"
                            disabled={false}
                            onClick={[Function]}
                            priority="primary"
                            role="button"
                            size="small"
                            to="/settings/org-slug/developer-settings/new/"
                          >
                            <Link
                              aria-label="Create New Application"
                              className="css-zvpqlo-StyledButton-getColors eqrebog0"
                              disabled={false}
                              onClick={[Function]}
                              onlyActiveOnIndex={false}
                              priority="primary"
                              role="button"
                              size="small"
                              style={Object {}}
                              to="/settings/org-slug/developer-settings/new/"
                            >
                              <a
                                aria-label="Create New Application"
                                className="css-zvpqlo-StyledButton-getColors eqrebog0"
                                disabled={false}
                                onClick={[Function]}
                                priority="primary"
                                role="button"
                                size="small"
                                style={Object {}}
                              >
                                <ButtonLabel
                                  priority="primary"
                                  size="small"
                                >
                                  <Component
                                    className="css-7ui8bl-ButtonLabel eqrebog1"
                                    priority="primary"
                                    size="small"
                                  >
                                    <span
                                      className="css-7ui8bl-ButtonLabel eqrebog1"
                                    >
                                      <Icon
                                        hasChildren={true}
                                        size="small"
                                      >
                                        <Component
                                          className="css-1vdnsie-Icon eqrebog2"
                                          hasChildren={true}
                                          size="small"
                                        >
                                          <span
                                            className="css-1vdnsie-Icon eqrebog2"
                                            size="small"
                                          >
                                            <StyledInlineSvg
                                              size="12px"
                                              src="icon-circle-add"
                                            >
                                              <InlineSvg
                                                className="css-1ov3rcq-StyledInlineSvg eqrebog3"
                                                size="12px"
                                                src="icon-circle-add"
                                              >
                                                <StyledSvg
                                                  className="css-1ov3rcq-StyledInlineSvg eqrebog3"
                                                  height="12px"
                                                  viewBox={Object {}}
                                                  width="12px"
                                                >
                                                  <svg
                                                    className="eqrebog3 css-1jjmnki-StyledSvg-StyledInlineSvg e2idor0"
                                                    height="12px"
                                                    viewBox={Object {}}
                                                    width="12px"
                                                  >
                                                    <use
                                                      href="#test"
                                                      xlinkHref="#test"
                                                    />
                                                  </svg>
                                                </StyledSvg>
                                              </InlineSvg>
                                            </StyledInlineSvg>
                                          </span>
                                        </Component>
                                      </Icon>
                                      Create New Application
                                    </span>
                                  </Component>
                                </ButtonLabel>
                              </a>
                            </Link>
                          </Component>
                        </StyledButton>
                      </Button>
                    </div>
                  </div>
                </Base>
              </Flex>
            </div>
          </Wrapper>
        </SettingsPageHeading>
        <Panel>
          <Component
            className="css-yahxlu-Panel e1laxa7d0"
          >
            <div
              className="css-yahxlu-Panel e1laxa7d0"
            >
              <PanelHeader>
                <Component
                  className="css-xhx6pj-PanelHeader-getPadding e1p8v8nv0"
                >
                  <Flex
                    align="center"
                    className="css-xhx6pj-PanelHeader-getPadding e1p8v8nv0"
                    justify="space-between"
                  >
                    <Base
                      align="center"
                      className="e1p8v8nv0 css-b7ices-PanelHeader-getPadding"
                      justify="space-between"
                    >
                      <div
                        className="e1p8v8nv0 css-b7ices-PanelHeader-getPadding"
                        is={null}
                      >
                        Applications
                      </div>
                    </Base>
                  </Flex>
                </Component>
              </PanelHeader>
              <PanelBody
                direction="column"
                disablePadding={true}
                flex={false}
              >
                <div
                  className="css-9vq8an-textStyles"
                >
                  <EmptyMessage>
                    <Wrapper>
                      <div
                        className="css-ev9qm0-Wrapper eh488yo0"
                      >
                        <Description
                          noMargin={true}
                        >
                          <Component
                            className="css-pwn5v-TextBlock-Description-MarginStyles eh488yo1"
                            noMargin={true}
                          >
                            <div
                              className="css-pwn5v-TextBlock-Description-MarginStyles eh488yo1"
                            >
                              No applications have been created yet.
                            </div>
                          </Component>
                        </Description>
                      </div>
                    </Wrapper>
                  </EmptyMessage>
                </div>
              </PanelBody>
            </div>
          </Component>
        </Panel>
      </div>
    </DocumentTitle>
  </SideEffect(DocumentTitle)>
</OrganizationDeveloperSettings>
`;
